# logbook-entry

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  manage.py  pyproject.toml
apps/accounts/: accounts.py  models.py  routes.py  schemas.py
apps/accounts/migrations/: 0001_initial.py  0002_customuser_initials_customuser_name.py
apps/logbooks/: apps.py  logbooks.py  logbooks_routes.py  logentries_routes.py  models.py  schemas.py
apps/logbooks/migrations/: 0001_initial.py  0002_alter_logbook_miles_driven.py  0003_logbook_driver_initials.py  0004_logbook_codriver_name.py  0005_alter_logentry_status.py
apps/todos/: models.py  routes.py  schemas.py  todos.py
apps/todos/migrations/: 0001_initial.py
django_inertia_react/: asgi.py  ninja_api.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/logbook/: LogBookForm.tsx  LogChart.tsx  LogEntry.tsx
frontend/src/layouts/: Layout.tsx  NoLayout.tsx
frontend/src/pages/: LogBook.tsx  LogBooksTable.tsx  Login.tsx  NewLogBook.tsx  Todos.tsx
frontend/src/utils/: time.ts
templates/: base.html  views.py
tests/: test_accounts.py  test_accounts_routes.py  test_logbooks.py  test_todos.py  test_todos_routes.py  testclient.py
